# GOAT-Royalty-App

./: .codex-global-state.json  .env  .env.example  .gitignore  .vercelignore  404.html  ALL-IN-ONE-INSTALL.sh  API_INTEGRATION_GUIDE.md  BUILD-INSTRUCTIONS.md  BUILD_AND_RUN.sh  BUILD_GUIDE.md  COMPREHENSIVE_SYSTEM_REPORT.md  CONSOLIDATED_FEATURES.md  DEPLOY-ALL-NEW-FEATURES.sh  DEPLOY-FULL-ECOSYSTEM.sh  DEPLOY-PHASE-AB-TO-H.sh  DEPLOY-SERVER-1-FULL.sh  DEPLOY-SSL-MIXER-AND-PLUGINS.sh  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DONE.md  Dockerfile  ENHANCEMENT_SUMMARY.md  FEATURE_SHOWCASE.md  FINAL-DEPLOY-COMMAND.sh  GOAT-FORCE-START.command  GOAT-SIZE-AUDIT.md  GOAT-WORK-SYSTEM.md  GOAT_APP_MOBILE_DEVELOPMENT_GUIDE.md  GOAT_FORCE_MASTER_PLAN.md  GOAT_ROYALTY_APP_PROJECT_COMPLETION_REPORT.md  INSTALL-MODEL-DOWNLOADER.sh  INSTALL-OLLAMA-REAL-AI.sh  JETSON_DEPLOYMENT_GUIDE.md  LIBERDUS_INTEGRATION_STRATEGY.md  LIBERDUS_SETUP_GUIDE.md  LINUX_SUPERCOMPUTER_SETUP.md  LOCAL_SETUP_GUIDE.md  MOUNT-EXTERNAL-STORAGE-FOR-DOCKER.sh  MOVE-TO-EXTERNAL-NOW.sh  (+111 more)
.codex/: AGENTS.md
GOAT-Royalty-USB/: README.md
GOAT-ULTIMATE-INSTALLER/: README.md  install-everything.ps1  install-everything.sh  scan-eastwest.ps1  scan-everything.ps1  scan-everything.sh  scan-native-instruments.ps1  scan-waves.ps1  size-check.sh
__tests__/: agent-api.test.js  core-loyalty.test.js  middleware-loyalty.test.js
_not-found/: __next._head.txt  __next._not-found.txt
agent-hub/: agent-control-center.html  gta-world-property.html  payment-center.html
ai-tools/: money-penny-agent.py
api-server/: .env.example  README.md  package.json  server.js
client/: package-lock.json  package.json
computer-use/: config.json
creator-tools/: catalog-manager.html  contract-generator.html  royalty-calculator-pro.html  split-sheet-generator.html  sync-licensing.html
data/: collaboration.json  fastassman-publishing-works.json  goat-config.json  market-trends.json  network_profiles.json  nft-portfolio.json  releases.json  revenue.json  sync_opportunities.json  waka-ascap.json  waka_catalog.json
demos/: fashionModuleDemo.js  ultimatePlatformDemo.js
deploy/: COMPLETE_SETUP_GUIDE.md  goat-deploy-architecture.md  master-deploy.sh  quick-deploy-vps1.sh  quick-deploy-vps2.sh  setup-ssh.sh
docs/: AUTO_UPDATE.md  CODE_SIGNING.md  GOAT-World-RP-Master-Vision.md  GOAT-World-RP-Roadmap.md
goat-apps-builder/: build-all.js  main.js  package-lock.json  package.json
goat-intel-server/: .gitignore  catalog_fingerprints.json  goat-config.json  goat_agents.py  goat_brain.py  goat_intel.py  goat_tools.py  money-penny-agent.py  moneypenny_brain_v7.md  moneypenny_knowledge.md  moneypenny_memory_merged.md  moneypenny_resource_links.md  sir_codex_memory_merged.md
goat-plugins/: README.md
goat-plugins/BrickSquad808/: CMakeLists.txt
goat-plugins/BrickSquad808/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
goat-plugins/GoatAutoTune/: CMakeLists.txt
goat-plugins/GoatAutoTune/Source/: PluginProcessor.cpp  PluginProcessor.h
goat-plugins/GoatBus/: CMakeLists.txt
goat-plugins/GoatBus/Source/: PluginProcessor.cpp  PluginProcessor.h
goat-plugins/GoatDelay/: CMakeLists.txt
goat-plugins/GoatDelay/Source/: PluginProcessor.cpp  PluginProcessor.h
goat-plugins/WakaVocalChain/: CMakeLists.txt
goat-plugins/WakaVocalChain/Source/: PluginProcessor.cpp  PluginProcessor.h
huggingface-models/: FULL-PLATFORM-ANALYSIS.md  MOST-DOWNLOADED.md  README.md
infrastructure/desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
infrastructure/desktop-app/src-tauri/src/: main.rs
installer/: README.md  build-all.sh
installers/: README.md  install.bat  install.ps1  install.sh
lib/: goat-data.js
lightning-ai/: MODEL-ROUTER-CATALOG.md  README.md
models/: goat-royalty-agent.Modelfile
nemo-agent-toolkit/: README.md  docker-compose.yml  requirements.txt
nemoclaw/: .gitignore  README.md  package.json
nexus-core/: README.md  ms-vanessa-guardian.html  nexus-config.json  nexus-dashboard.html  nexus-live.html
nvidia-model-portal/: bulk-download.sh  download-models.sh
nvidia-speech/: README.md
openshell/: GATEWAY-GUIDE.md  README.md
public/: agent-007.html  goat-app.html  index.html  moneypenny.html
rules/: default.rules
scripts/: PULL-CREATOR-PACK.command  README-claude-installer-oscar.txt  RESUME-LLM-DOWNLOADS.command  START-TRAINING.command  build-dmg-oscar.sh  build-portable-oscar.sh  copy-evidence-models-to-og-drives.sh  create_eden_animation_clips.py  daz-asset-catalog.py  deploy-server-1.sh  deploy-server-2.sh  deploy-to-mycloud.sh  generate-evidence-log.js  goat-llm-setup.sh  goat-nas-backup.sh  goat-pull-models.sh  goat-start-all.sh  goat-sync.sh  hostinger-gaming-setup.sh  hostinger-setup.sh  ingest_gdrive_evidence.py  install-claude-oscar.ps1  install-claude-oscar.sh  installer-oscar.nsi  lexi-thor-deploy.sh  setup-local-llm-oscar.sh  setup-local-llm-vps.sh  start-oscar.sh  sync-core.sh
shell_snapshots/: 019ea5b2-db5c-72e0-9841-4e0d0794c1b1.1780896422774030000.sh
src/: main.js  preload.js  server.js
static/: MEGA-CENTER-DATA-SOURCES.md  __next._head.txt  about.html  ai-dashboard.html  banking.html  casino.html  downloads.html  gaming-server.html  goat-ultimate-studio-complete.html  goat-ultimate-studio-pro.html  goat-ultimate-studio.html  index.html  models.html  money-penny.html  nemo-chat.html  pro-royalties.html  screenwriting.html  studio.html  tools.html  unreal-copilot.html  wallet.html
vendor_imports/: skills-curated-cache.json
web-app/: 404.html  __next.__PAGE__.txt  __next._full.txt  __next._index.txt  __next._tree.txt  about.html  agent-007.html  agent-status.html  agents-brain-3d.html  agents-brain.html  agents.html  ai-dashboard.html  ai-models-download.html  ai-producer.html  anigo-alley.html  api-download.html  api-vault.html  ar-scout-launcher.html  art-lab.html  audio-fingerprinting.html  autopilot-launcher.html  autopilot.html  banking.html  beat-maker.html  campaigns.html  casino.html  catalog.html  cfo-brain-launcher.html  command-center.html  contact.html  dating.html  (+141 more)
(+433 files in other folders)
